Fix - add any files and bucket

--- a/terraform/prod/terraform.tfvars.example
+++ b/terraform/prod/terraform.tfvars.example
@@ -4,9 +4,12 @@ zone                     = "ru-central1-a"
 image_id                 = "imageidqn4buiaigqc"
 public_key_path          = "~/.ssh/ubuntu.pub"
 private_key_path         = "~/.ssh/ubuntu"
-subnet_id                = "subnetidp4kb5c9"
+subnet_id                = "subnet_id7m4p4kb5c9"
+network_id               = "network_idnnn5dpo60qj"
 service_account_key_file = "~/Documents/Otus/yc-cloud/tf_sa_key_file.json"
-app_disk_image           = "77585ni8udp9icj3q2iva"
-db_disk_image            = "774l845sn5crgrq8lsiva"
+app_disk_image           = "app_disk_imagej3q2mdg"
+db_disk_image            = "db_disk_imagegrqvlss"
 vCores_count             = 2
-service_account_id       = "1505464sadfasfsdfssdf"
+storage_access_key       = "storage_access_key-S"
+storage_secret_key       = "storage_secret_keyknm0xe8xuLpjE1-"
+storage_sa_id            = "terraform"
