--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,8 +1,15 @@
-cloud_id  = "cloudid4242342323340"
-folder_id = "folderid2232323dvonh"
-zone = "ru-central1-a"
-image_id = "imageidqn4buiaigqc"
-public_key_path = "~/.ssh/ubuntu.pub"
-private_key_path = "~/.ssh/ubuntu"
-subnet_id = "subnetidp4kb5c9"
+cloud_id                 = "cloudid4242342323340"
+folder_id                = "folderid2232323dvonh"
+zone                     = "ru-central1-a"
+image_id                 = "imageidqn4buiaigqc"
+public_key_path          = "~/.ssh/ubuntu.pub"
+private_key_path         = "~/.ssh/ubuntu"
+subnet_id                = "subnet_id7m4p4kb5c9"
+network_id               = "network_idnnn5dpo60qj"
 service_account_key_file = "~/Documents/Otus/yc-cloud/tf_sa_key_file.json"
+app_disk_image           = "app_disk_imagej3q2mdg"
+db_disk_image            = "db_disk_imagegrqvlss"
+vCores_count             = 2
+storage_access_key       = "storage_access_key-S"
+storage_secret_key       = "storage_secret_keyknm0xe8xuLpjE1-"
+storage_sa_id            = "terraform"
