--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
-inventory = ./inventory
+inventory = ./inventory.sh
 remote_user = ubuntu
 private_key_file = ~/.ssh/ubuntu
 host_key_checking = False
 retry_files_enabled = False
+show_custom_stats = yes
