--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -5,3 +5,4 @@ private_key_file = ~/.ssh/ubuntu
 host_key_checking = False
 retry_files_enabled = False
 show_custom_stats = yes
+deprecation_warnings=False
