--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,5 +1,5 @@
 {
-    "yc_service_account_key_file": "files/key.json",
+    "yc_service_account_key_file": "packer/files/key.json",
     "yc_folder_id": "b1gekrrielbmteicvonh",
     "yc_source_image_family": "ubuntu-1604-lts"
 }
