--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,8 +1,17 @@
 [defaults]
-inventory = ./inventory.sh
+inventory = ./environments/stage/inventory.sh
 remote_user = ubuntu
 private_key_file = ~/.ssh/ubuntu
-host_key_checking = False
-retry_files_enabled = False
 show_custom_stats = yes
 deprecation_warnings=False
+# Отключим проверку SSH Host-keys (поскольку они всегда разные для новых инстансов)
+host_key_checking = False
+# Отключим создание *.retry-файлов (они нечасто нужны, но мешаются под руками)
+retry_files_enabled = False
+# # Явно укажем расположение ролей (можно задать несколько путей через ; )
+roles_path = ./roles
+
+[diff]
+# Включим обязательный вывод diff при наличии изменений и вывод 5 строк контекста
+always = True
+context = 5
