--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,6 +2,7 @@
 inventory = ./environments/stage/inventory.sh
 remote_user = ubuntu
 private_key_file = ~/.ssh/ubuntu
+vault_password_file = ~/Documents/Otus/ansible/vault.key
 show_custom_stats = yes
 deprecation_warnings=False
 # Отключим проверку SSH Host-keys (поскольку они всегда разные для новых инстансов)
