--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -10,6 +10,7 @@ Vagrant.configure("2") do |config|
     db.vm.network :private_network, ip: "10.10.10.10"
 
     db.vm.provision "ansible" do |ansible|
+      ansible.compatibility_mode = "2.0"
       ansible.playbook = "playbooks/site.yml"
       ansible.groups = {
       "db" => ["dbserver"],
@@ -22,5 +23,23 @@ Vagrant.configure("2") do |config|
     app.vm.box = "ubuntu/xenial64"
     app.vm.hostname = "appserver"
     app.vm.network :private_network, ip: "10.10.10.20"
+
+    app.vm.provision "ansible" do |ansible|
+      ansible.playbook = "playbooks/site.yml"
+      ansible.groups = {
+      "app" => ["appserver"],
+      "app:vars" => { "db_host" => "10.10.10.10"}
+      }
+      ansible.extra_vars = {
+        "deploy_user" => "ubuntu",
+        "nginx_sites" => {
+          "default" => [
+            "listen 80",
+            "server_name 'reddit'",
+            "location / { proxy_pass http://127.0.0.1:9292; }"
+          ]
+        }
+      }
+    end
   end
 end
