--- a/ansible/playbooks/app.yml
+++ b/ansible/playbooks/app.yml
@@ -2,10 +2,8 @@
 - name: Configure App
   hosts: app
   become: true
-
-  vars:
-   db_host: 10.130.0.8
-
+#  vars:
+#   db_host: 10.130.0.8
   roles:
     - app
     - jdauphant.nginx
