--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -1,6 +1,8 @@
----
 - name: Deploy Reddit APP
   hosts: app
+  vars:
+    deploy_user: ubuntu
+  become: true
   tasks:
     - name: Install git
       become: true
@@ -10,14 +12,14 @@
     - name: Fetch the latest version of application code
       git:
         repo: 'https://github.com/express42/reddit.git'
-        dest: /home/ubuntu/reddit
+        dest: /home/{{ deploy_user }}/reddit
         version: monolith
       notify: restart puma
 
     - name: bundle install
       bundler:
         state: present
-        chdir: /home/ubuntu/reddit
+        chdir: /home/{{ deploy_user }}/reddit
 
   handlers:
   - name: restart puma
