--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for app
 - name: Show info about the env this host belongs to
   debug:
-    msg: "This host is in {{ env }} environment!!!"
+    msg: "This host is in {{ env }} {{ deploy_user}} environment!!!"
 
 - include: ruby.yml
 - include: puma.yml
