--- a/ansible/roles/db/tasks/config_mongo.yml
+++ b/ansible/roles/db/tasks/config_mongo.yml
@@ -2,8 +2,7 @@
 # tasks file for db
     - name: Change mongo config file
       template:
-        src: mongod.conf.j2
+        src: templates/mongod.conf.j2
         dest: /etc/mongod.conf
         mode: 0644
       notify: restart mongod
-
